add google test example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(hackathon)
 
 set(CMAKE_CXX_STANDARD 17)
 
+include_directories(./)
+
 add_subdirectory(src)
+add_subdirectory(3party/googletest)
