--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,6 @@
+cmake_minimum_required(VERSION 2.8.4)
+project(latte_library)
+set(CMAKE_CXX_STANDARD 17)
+
 add_subdirectory(urlshortener)
 add_subdirectory(tests)
